--- a/src/index.html
+++ b/src/index.html
@@ -33,13 +33,14 @@
            <li value="14">Стиль14</li>
            <li value="15">Стиль15</li>
            <li value="16">Стиль16</li>
-
         </ul>
-           <button id="saveimg">Сохранить</button>
     </div>
-
 </div>
-    <div id="canvasforsave"></div>
+<div class="bottompart">
+    <textarea name="" id="area" cols="30" rows="5"></textarea>
+    <button>Применить</button>
+</div>
+
 
 </section>
 <script src="js/html2canvas.js"></script>
