--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <input type="file"  tabindex="-1" id="uploadPicture" />
 </div>
 <div class="images-classes" draggable="true">
-    <div class="image"><img src="" id='img1'  alt="Image preview..." width="490px" height="340px"></div>
+    <div class="image"><img src="" id='img1'  alt="Image preview..."></div>
        <div> <ul>
             <li value="1">Стиль1</li>
             <li value="2">Стиль2</li>
@@ -37,13 +37,14 @@
     </div>
 </div>
 <div class="bottompart">
-    <textarea name="" id="area" cols="30" rows="5"></textarea>
-    <button>Применить</button>
+    <textarea name="" id="area" cols="30" rows="5">Впишите свой CSS-фильтр
+
+    </textarea>
+    <button id="apply">Применить</button>
 </div>
 
 
 </section>
-<script src="js/html2canvas.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
